# GLProject

./: CMakeLists.txt
include/GLFW/: glfw3.h  glfw3native.h
include/glad/: glad.h
src/: glad.c  main.cpp  shader.cpp  shader.h
src/Shaders/: Light.fs  Shader.fs  Shader.vs
